# HyLang

./: .gitignore  CMakeLists.txt  Cargo.toml  HyLang.sln  README.md
HyLang/: HyLang.csproj  Program.cs
HyLang/Compiler/Lexer/: KeyWords.cs  Lexer.cs
HyLang/Compiler/Parser/: Parser.cs
HyLang/Compiler/Types/: Integer32Value.cs  Value.cs
HyLang/Parser/: KeyWords.cs  Lexer.cs  Parser.cs  Token.cs  TokenType.cs
HyLang/Parser/AST/: BinaryExpressionNode.cs  BinaryNode.cs  Node.cs  NumberExpressionNode.cs  NumberNode.cs  UnaryExpressionNode.cs
HyLang/Syntax/: Functions  If  Loops  Operators  Packpage  PrimitiveLiterals  Variables  class
src/: interpreter.rs  lexer.rs  main.rs  parser.rs
src/compiler/: CMakeLists.txt  compiler.cpp  lexer.h  parser.cpp  parser.h
src/compiler/ast/: node.h  operations.h  visitor.cpp  visitor.h
src/compiler/ast/nodes/: binaryExpNode.cpp  binaryExpNode.h  integerExpNode.cpp  integerExpNode.h  unaryExpNode.cpp  unaryExpNode.h
src/compiler/lexer/: lexer.cpp  lexer.h
src/compiler/parser/: parser.cpp  parser.h
src/interpreter/: expression.rs  library.rs  node.rs  statement.rs  task.rs
src/interpreter/expression/: array_exp.rs  binary_exp.rs  boolean_exp.rs  char_exp.rs  conditional_exp.rs  functional_call_exp.rs  number_exp.rs  unary_exp.rs  value_exp.rs
src/interpreter/memory/: object.rs
src/interpreter/statement/: assignment_stm.rs  block_stm.rs  break_stm.rs  continue_stm.rs  define_function.rs  define_function_stm.rs  define_variable_stm.rs  empty_stm.rs  (+5 more)
src/lexer/: token.rs
src/parser/: expression.rs  node.rs
(+14 files in other folders)
